@@ -4,6 +4,8 @@ examples/ex1.pl
 examples/ex2.pl
 examples/ex3.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -18,8 +20,8 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Env-Browser/00-use.t
-t/Env-Browser/01-version.t
-t/Env-Browser/02-pod_coverage.t
-t/Env-Browser/03-pod.t
-t/Env-Browser/04-run.t
+t/Env-Browser/01-use.t
+t/Env-Browser/02-version.t
+t/Env-Browser/03-run.t
+xt/Env-Browser/01-pod_coverage.t
+xt/Env-Browser/02-pod.t
