@@ -3,14 +3,10 @@ abstract: 'Process environment variable $BROWSER and run web browser.'
 author:
   - 'Michal Spacek <skim@cpan.org>'
 build_requires:
-  English: 0
   ExtUtils::MakeMaker: 6.36
-  File::Object: 0.06
   Test::More: 0
   Test::NoWarnings: 0
   Test::Output: 1.02
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -26,6 +22,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Readonly: 0
   perl: 5.6.0
