@@ -2,6 +2,7 @@
  - Add 'readme_from' directive to Makefile.PL.
  - Fix LICENSE file.
  - Improve SEE ALSO section in doc.
+ - Move author tests to xt/ directory.
  - Update LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.16 version.
  - Update copyright years.
